<resources>
    <string name="app_name">INFITS</string>
    <string name="infits">INFITS</string>
    <string name="skip">Skip</string>
    <string name="welcome_to">Welcome to</string>
    <string name="content">One stop destination for</string>
    <string name="cont">a Healthy and Balanced life</string>
    <string name="create_account">Create Account</string>
    <string name="next">Next</string>
    <string name="log_in">Log in</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="user_login">USer Login</string>
    <string name="email">Email</string>
    <string name="logo">logo</string>
    <string name="password">Password</string>
    <string name="create">Create Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="meal_tracker">Meal Tracker</string>
    <string name="_13_september_2022">13 September 2022</string>
    <string name="today_s_meal">Today\'s Meal</string>
    <string name="breakfast">Breakfast</string>
    <string name="launch">Launch</string>
    <string name="snack">Snacks</string>
    <string name="dinner">Dinner</string>
    <string name="aloo_paratha">Aloo Paratha</string>
    <string name="calories_299_protien_4g_carbs_36g_fat_12g">Calories 299,Protien 4g,Carbs 36g,Fat 12g</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_achievements">My Achievements</string>
    <string name="reached_25_clients">Reached 25 Clients</string>
    <string name="_5_10">5/10</string>
    <string name="reached">Reached</string>
    <string name="_25">25</string>
    <string name="clients">Clients</string>
    <string name="congratulations">Congratulations!!</string>
    <string name="john_wayne">John Wayne</string>
    <string name="you_have_reached_100_clients">You have reached 100 clients</string>
    <string name="share">Share</string>
    <string name="teaminfits">\@teaminfits</string>
    <string name="earn_money">Earn Money</string>
    <string name="by_refer">By Refer</string>
    <string name="m1234sdneee322">m1234sdneee322</string>
    <string name="copy">Copy</string>
    <string name="invite_a_friend">Invite A friend</string>
    <string name="tongkun_lee">Tongkun Lee</string>
    <string name="facebook">Facebook</string>
    <string name="invite">Invite</string>
    <string name="about">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tristique sem integer eros, velit vitae aliquam libero commodo. Id posuere elementum consectetur purus massa consequat. Morbi risus purus libero.</string>
    <string name="about_us">About Us</string>
    <string name="congratulation">Congratulations!</string>
    <string name="earned">You have just earned $</string>
    <string name="_50">50</string>
    <string name="message">One of your friends has joined by your referral code. Do more invitations to earn more.</string>
    <string name="invite_another">Invite Another</string>
    <string name="in_morning">In morning</string>
    <string name="mon">Mon</string>
    <string name="save_plan">Save Plan</string>
    <string name="after_break">After Break</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="thu">Thu</string>
    <string name="open_fragment">Open Fragment</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="dashboard_fragment">Dashboard fragment</string>
    <string name="title_activity_home_navigation">HomeNavigation</string>
    <string name="client">ClientList</string>
    <string name="appointment">Appointments</string>
    <string name="setting">Settings</string>
    <string name="recipies">Recipies</string>
    <string name="mail">Mail</string>
    <string name="live">Live</string>
    <string name="chats">Chats</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_new">Add new</string>
    <string name="all_recipies">All Recipies</string>
    <string name="ronald_richards">Ronald Richards</string>
    <string name="gmail">ronaldrichards@gmail.com</string>
    <string name="personal_info">Personal Info</string>
    <string name="name_plan_etc">Name,Plan,etc</string>
    <string name="diet_chart">Diet Chart</string>
    <string name="plan_your_diet">Plan your diet</string>
    <string name="metrics">Metrics</string>
    <string name="check_progress">Check progress</string>
    <string name="tracker">Tracker</string>
    <string name="track_meal">Track Meal</string>
    <string name="health_details">Health Details</string>
    <string name="form_document">Form,Document</string>
    <string name="chat_with">Chat with...</string>
    <string name="never">Never Give Up. Great Things. Take Time.</string>
    <string name="client_profile">Client Profile</string>
    <string name="steps">Steps</string>
    <string name="_500">500</string>
    <string name="_1100">1100</string>
    <string name="goal">Goal</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="_800">800</string>
    <string name="bpm">bpm</string>
    <string name="_120">120</string>
    <string name="water">Water</string>
    <string name="ml">ml</string>
    <string name="_8">8</string>
    <string name="hr">hr</string>
    <string name="_35">35</string>
    <string name="min">min</string>
    <string name="hours">hours</string>
    <string name="weight_track">Weight Track</string>
    <string name="_80">80</string>
    <string name="kg">kg</string>
    <string name="calorie_track">Calorie Track</string>
    <string name="kcal">kcal</string>
    <string name="where">“Dieting is the only game where you win when you lose!”</string>
    <string name="set_goal">Set Goal</string>
    <string name="rate">Rate</string>
    <string name="hrt">Heart</string>
    <string name="sleep">Sleep</string>
    <string name="daily_count">Daily Count</string>
    <string name="glasses">Glasses</string>
    <string name="weekly_avg">Weekly Avg</string>
    <string name="monthly_avg">Monthly Avg</string>
    <string name="monthly">Monthly Avg</string>
    <string name="total">Total</string>
    <string name="past_activity">Past Activity</string>
    <string name="view_all">View All</string>
    <string name="weight">Weight</string>
    <string name="trac">Track</string>
    <string name="cal">Calorie</string>
    <string name="sep">SEP</string>
    <string name="item">Item</string>
    <string name="shake">Shake</string>
    <string name="_180_ml">180 ml</string>
    <string name="_9_10_am">9:10 AM</string>
    <string name="back">Back</string>
    <string name="client_calories_report">Client Calories Report</string>
    <string name="activity">Activity</string>
    <string name="snacks">Snacks</string>
    <string name="_370_kcal">370 Kcal</string>
    <string name="_19_jun_2021">19 Jun 2021</string>
    <string name="_5_30_pm">5:30 PM</string>
    <string name="add_client">Add Client</string>
    <string name="gender">Gender</string>
    <string name="phone">Phone no.</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weigh">Weight</string>
    <string name="abou">About</string>
    <string name="plan">Plan</string>
    <string name="select">Select</string>
    <string name="save">Save</string>
    <string name="add_plan">Add Plan</string>
    <string name="you_have_not">You Have not</string>
    <string name="created_any_plan_yet">created any plan yet</string>
    <string name="year">Year</string>
    <string name="custom_dates">Custom Dates</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>

</resources>