<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B2C43"
    tools:context=".View.ReferAchievements">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
      android:layout_margin="35dp"
        android:background="@drawable/btnback"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="163dp"
            android:src="@drawable/completed"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nats"
            android:text="@string/congratulation"
            android:textColor="#051532"
            android:textSize="30sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nats"
                android:text="@string/earned"
                android:textColor="#051532"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nats"
                android:text="@string/_50"
                android:textColor="#051532"
                android:textSize="30sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="45dp"
            android:fontFamily="@font/nats"
            android:lineHeight="25dp"
            android:text="@string/message"
            android:textAlignment="center"
            android:textColor="#051532"
            android:textSize="20sp"
            tools:targetApi="p" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="245dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="45dp"
            android:background="@drawable/btnback"
            android:backgroundTint="#4B9AFB"
            android:fontFamily="@font/nats"
            android:text="@string/invite_another"
            android:textColor="@color/white"
            android:textSize="23sp"
            tools:ignore="TextContrastCheck" />
    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>