<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#1B2C43"
    tools:context=".Fragments.ReferAchievementsFragments">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="343dp"
        android:layout_height="545dp"
        android:layout_centerInParent="true"
        android:background="@drawable/invitebtn"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="end"
            android:layout_marginTop="-45dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/close"
            app:tint="#050505"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="240dp"
            android:layout_height="163dp"
            android:src="@drawable/completed"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="182dp"
            android:layout_height="63dp"
            android:fontFamily="@font/nats"
            android:text="@string/congratulation"
            android:textColor="#051532"
            android:textSize="30sp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="276dp"
            android:layout_height="63dp"
            android:layout_marginTop="-30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nats"
                android:text="@string/earned"
                android:textColor="#051532"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nats"
                android:text="@string/_50"
                android:textColor="#051532"
                android:textSize="30sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <TextView
            android:layout_width="277dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nats"
            android:lineHeight="16dp"
            android:text="@string/message"
            android:textAlignment="center"
            android:textColor="#051532"
            android:textSize="20sp"
            tools:targetApi="p" />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="245dp"
            android:layout_height="53dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/invitebtn"
            android:backgroundTint="#4B9AFB"
            android:fontFamily="@font/nats"
            android:text="@string/invite_another"
            android:textColor="@color/white"
            android:textSize="23sp"
            tools:ignore="TextContrastCheck" />
    </androidx.appcompat.widget.LinearLayoutCompat>




</RelativeLayout>