<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="68dp"
    android:orientation="horizontal">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/dailyCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:background="@color/white"
        android:minWidth="82dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/nats"
            android:text="@string/sep"
            android:textColor="#63AEFF"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-25dp"
            android:fontFamily="@font/nats"
            android:text="@string/_8"
            android:textColor="@color/black"
            android:textSize="23sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/view"
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/line" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/itemLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@color/white"
        android:minWidth="82dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/nats"
            android:text="@string/shake"
            android:textColor="#63AEFF"
            android:textSize="20sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-25dp"
            android:fontFamily="@font/nats"
            android:text="@string/_180_ml"
            android:textColor="@color/black"
            android:textSize="23sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nats"
        android:layout_marginStart="90dp"
        android:text="@string/_9_10_am"
        android:textColor="@color/black"
        android:textSize="19sp" />


</androidx.appcompat.widget.LinearLayoutCompat>