<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".View.StartActvity">

    <TextView
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:text="@string/skip"
        android:fontFamily="@font/nats"
        android:textSize="22sp"
        android:textColor="#7282FB"
        android:layout_marginEnd="22dp"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/welcome"
        android:layout_width="179dp"
        android:layout_height="176dp"
        android:layout_below="@id/skip"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/nats"
            android:text="@string/welcome_to"
            android:textColor="#AC7CF3"
            android:textSize="25sp" />

        <ImageView
            android:id="@+id/IvInfits"
            android:layout_width="wrap_content"
            android:layout_height="152dp"
            android:layout_gravity="center"
            android:layout_marginTop="-65dp"
            android:src="@drawable/infit"
            tools:ignore="ContentDescription" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcome"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="-60dp"
        android:fontFamily="@font/nats"
        android:text="@string/content"
        android:textColor="#AC7CF3"
        android:textSize="25sp" />
    <TextView
        android:id="@+id/content2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="-20dp"
        android:fontFamily="@font/nats"
        android:textColor="#AC7CF3"
        android:text="@string/cont"
        android:textSize="25sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/content2"
        android:layout_marginStart="19dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="338dp"
            android:layout_gravity="center"
            android:layout_height="245dp" />

        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
            android:id="@+id/dot1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:dotsColor="@color/black"
            android:layout_gravity="center"
            app:dotsSize="8dp"
            app:dotsSpacing="5dp"
            android:backgroundTint="@color/white"
            app:progressMode="false"
            app:selectedDotColor="#3E5DB7"
            tools:ignore="UnusedAttribute" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn"
        android:layout_width="267dp"
        android:layout_height="52dp"
        android:layout_above="@+id/login"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/btnback"
        android:fontFamily="@font/nats"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:fontFamily="@font/nats"
android:layout_marginBottom="20dp"
        android:text="@string/next"
        android:textColor="#AC7CF3"
        android:textSize="25sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/next"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAlready"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:fontFamily="@font/nats"
            android:text="@string/already_have_an_account"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:fontFamily="@font/nats"
            android:text="@string/log_in"
            android:textColor="#AC7CF3"
            android:textSize="25sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>




</RelativeLayout>