<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_margin="10dp"
    android:background="@drawable/reportdrawable"
    android:layout_height="60dp">
    <ImageView
        android:layout_width="22dp"
        android:layout_height="17dp"
        android:src="@drawable/resturant"
        android:layout_gravity="center_vertical"
        tools:ignore="ContentDescription" />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:orientation="vertical">
        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snacks"
            android:textSize="22sp"
            android:fontFamily="@font/nats"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"/>
        <TextView
            android:id="@+id/kcal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_370_kcal"
            android:textSize="17sp"
            android:fontFamily="@font/nats"
            android:textColor="@color/black"
            android:layout_marginTop="-20dp"
            android:layout_marginStart="10dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
       android:gravity="end"
        android:orientation="vertical">
        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_19_jun_2021"
            android:textSize="16sp"
            android:fontFamily="@font/nats"
            android:textColor="@color/black"
            android:layout_marginStart="10dp"/>
        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5_30_pm"
            android:textSize="17sp"
            android:fontFamily="@font/nats"
            android:textColor="@color/black"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="-15dp"
            android:layout_marginStart="10dp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>