<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ReferImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
       android:layout_marginStart="10dp"
        android:src="@drawable/p1"
        app:civ_border_color="@color/white"
        app:civ_border_width="2dp" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_weight="2"
        android:layout_marginStart="10dp"

        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/ReferName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/nats"
            android:text="@string/tongkun_lee"
            android:textColor="@color/black"
            android:textSize="22sp"/>
        <TextView
            android:id="@+id/ReferSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nats"
            android:text="@string/facebook"
            android:layout_marginTop="-25dp"
            android:textColor="#051532"
            android:textSize="18sp"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/ReferInvite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
       android:layout_weight="0.3"
        android:fontFamily="@font/nats"
        android:textColor="#4B9AFB"
        android:textSize="22sp"
        android:text="@string/invite"/>

</androidx.appcompat.widget.LinearLayoutCompat>